--- a/weshare/package.json
+++ b/weshare/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@hookform/resolvers": "^3.4.2",
     "@tanstack/react-query": "^5.32.0",
     "axios": "^1.6.8",
